<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome to Shoe Store</string>
    <string name="welcome_disclaimer">Welcome to the app where you can find all the shoes that are right for you. If there are no sizes you are looking for, do not hesitate to contact us.</string>
    <string name="next">Next</string>
    <string name="instruction">Instruction</string>
    <string name="follow_this_steps">Follow this steps</string>
    <string name="instructions">To purchase the products you have to add to cart. You can view all the products available in the list and open a detail to view other details. Before buying a product: 1. Select model 2. Select color 3. Select size 4. Add to cart</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="show_name">Show name</string>
    <string name="show_company">Show company</string>
    <string name="show_size">Show size</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="toast_error_message_shoe_detail">Please add correct information</string>
</resources>
