<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- In the given layout, both layouts: ConstraintLayout and LinearLayout can be applied.
I chose Constraint because I need more flexibility with different element in the page -->
    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodel.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_name_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="right"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/shoe_name_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/shoe_name_edit_text" />

        <EditText
            android:id="@+id/shoe_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_company_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="right"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@id/shoe_company_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/shoe_company_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/shoe_company_edit_text" />

        <EditText
            android:id="@+id/shoe_company_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewModel.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_company_text_view"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_edit_text" />

        <TextView
            android:id="@+id/shoe_size_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="right"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="@id/shoe_size_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/shoe_size_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/shoe_size_edit_text" />

        <EditText
            android:id="@+id/shoe_size_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewModel.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_text_view"
            app:layout_constraintTop_toBottomOf="@id/shoe_company_edit_text" />

        <TextView
            android:id="@+id/shoe_description_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="right"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@id/shoe_description_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/shoe_description_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/shoe_description_edit_text" />

        <EditText
            android:id="@+id/shoe_description_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewModel.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_text_view"
            app:layout_constraintTop_toBottomOf="@id/shoe_size_edit_text" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_description_edit_text" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintTop_toBottomOf="@id/shoe_description_edit_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>